Your commit message here

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="images/photo-1610502778270-c5c6f4c7d575.jpeg" type="image/x-icon">
+  <link rel="shortcut icon" href="images/WhatsApp_Image_2025-03-23_at_16.37.49_c5952935-removebg-preview.png" type="image/x-icon">
   <meta name="description" content="Unique t-shirts with various styles and colors available for customization. Perfect for fashion lovers seeking quality.">
   <title>Customizable High-Quality T-Shirts for Fashion Enthusiasts</title>
   <link rel="stylesheet" href="css/mobirise2.css">
@@ -140,7 +140,7 @@
             <div class="navbar-brand d-flex">
                 <span class="navbar-logo">
                     <a href="#">
-                        <img src="images/photo-1610502778270-c5c6f4c7d575.jpeg" alt="">
+                        <img src="images/WhatsApp_Image_2025-03-23_at_16.37.49_c5952935-removebg-preview.png" alt="">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap">
