Your commit message here

--- a/index.html
+++ b/index.html
@@ -161,7 +161,10 @@
                         <a class="nav-link link display-7" href="#">Shop</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link link display-7" href="#">Custom</a>
+                        <a class="nav-link link display-7" href="#">Men</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link link display-7" href="#">Women</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link link display-7" href="#">Trends</a>
