--- a/tes/index.html
+++ b/tes/index.html
@@ -70,7 +70,7 @@
         <h1>Welcome to Our Shop</h1>
     </header>
     <div class="container">
-        <a href="/aeroxstyle" class="home-button">Go to Home Page</a>
+        <a href="/index.html" class="home-button">Go to Home Page</a>
         <div class="product">
             <img src="https://via.placeholder.com/100" alt="Product 1">
             <div class="product-info">
