--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 }
 .color-button {
     
-            background-color: #007BFF;
+            background-color: #000000;
             color: #fff;
             transition: background-color 0.3s ease;
             
