Your commit message here

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                     </a>
                 </span>
                 <span class="navbar-caption-wrap">
-                    <a class="navbar-caption display-7" href="#">aeroxstyle</a>
+                    <a class="navbar-caption display-7" href="#" style="color: #fff;">aeroxstyle</a>
                 </span>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <div class="hamburger">
