Your commit message here

--- a/index.html
+++ b/index.html
@@ -920,7 +920,7 @@ for (var attr in meta) {
       </a>
     </div>
 <div class="header__mobile__button">
-        <a href="/account" class="navlink"><svg aria-hidden="true" focusable="false" role="presentation" class="icon icon-profile-circled" viewBox="0 0 24 24"><path d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2z" stroke="#000" stroke-linecap="round" stroke-linejoin="round"></path><path d="M4.271 18.346S6.5 15.5 12 15.5s7.73 2.846 7.73 2.846M12 12a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" stroke="#000" stroke-linecap="round" stroke-linejoin="round"></path></svg><span class="visually-hidden">Account</span>
+        <a href="https://pages.razorpay.com/stores/st_QCveiNeMCGSHCh" class="navlink"><svg aria-hidden="true" focusable="false" role="presentation" class="icon icon-profile-circled" viewBox="0 0 24 24"><path d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2z" stroke="#000" stroke-linecap="round" stroke-linejoin="round"></path><path d="M4.271 18.346S6.5 15.5 12 15.5s7.73 2.846 7.73 2.846M12 12a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" stroke="#000" stroke-linecap="round" stroke-linejoin="round"></path></svg><span class="visually-hidden">Account</span>
         </a>
       </div><div class="header__mobile__button">
       <a href="/cart" class="navlink navlink--cart navlink--cart--icon" data-cart-toggle="">
@@ -955,7 +955,7 @@ for (var attr in meta) {
   </div></div>
 
               <div data-child-takes-space="" class="header__desktop__bar__r"><div class="header__desktop__buttons header__desktop__buttons--icons caps"><div class="header__desktop__button">
-        <a href="/account" class="navlink" title="My Account"><svg aria-hidden="true" focusable="false" role="presentation" class="icon icon-profile-circled" viewBox="0 0 24 24"><path d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2z" stroke="#000" stroke-linecap="round" stroke-linejoin="round"></path><path d="M4.271 18.346S6.5 15.5 12 15.5s7.73 2.846 7.73 2.846M12 12a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" stroke="#000" stroke-linecap="round" stroke-linejoin="round"></path></svg><span class="visually-hidden">Account</span>
+        <a href="https://pages.razorpay.com/stores/st_QCveiNeMCGSHCh" class="navlink" title="My Account"><svg aria-hidden="true" focusable="false" role="presentation" class="icon icon-profile-circled" viewBox="0 0 24 24"><path d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2z" stroke="#000" stroke-linecap="round" stroke-linejoin="round"></path><path d="M4.271 18.346S6.5 15.5 12 15.5s7.73 2.846 7.73 2.846M12 12a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" stroke="#000" stroke-linecap="round" stroke-linejoin="round"></path></svg><span class="visually-hidden">Account</span>
         </a>
       </div><div class="header__desktop__button">
         <header-search-popdown>
@@ -1011,7 +1011,7 @@ for (var attr in meta) {
 <div class="menu__item 
   
    child">
-  <a href="/collections/new-arrival" data-top-link="" class="navlink navlink--toplevel">
+  <a href="https://pages.razorpay.com/stores/st_QCveiNeMCGSHCh" data-top-link="" class="navlink navlink--toplevel">
     <span class="navtext">New Arrival</span>
   </a>
   
@@ -1330,7 +1330,7 @@ for (var attr in meta) {
           <div class="drawer__menu" data-sliderule-pane="0" data-scroll-lock-scrollable="">
             <div class="drawer__main-menu"><div class="sliderule__wrapper">
     <div class="sliderow" role="button" data-animates="0" data-animation="drawer-items-fade" data-animation-delay="250" data-animation-duration="500">
-      <a class="sliderow__title" href="/collections/new-arrival">New Arrival</a>
+      <a class="sliderow__title" href="https://pages.razorpay.com/stores/st_QCveiNeMCGSHCh">New Arrival</a>
     </div></div><div class="sliderule__wrapper"><button class="sliderow" type="button" data-animates="0" data-animation="drawer-items-fade" data-animation-delay="300" data-animation-duration="500" data-sliderule-open="sliderule-409f71e3de235f5d7eca795713d89639">
       <span class="sliderow__title">
         Shirts
@@ -1785,31 +1785,31 @@ for (var attr in meta) {
 </div><div class="drawer__empty" data-cart-empty="" data-scroll-lock-scrollable="" style="--base-animation-delay: 200ms">
           <div class="drawer__empty__inner">
             <p class="drawer__empty__message" data-animation="cart-items-fade" data-animation-duration="500" data-animation-delay="200">Your Cart is Empty</p><div class="drawer__empty__buttons"><div class="drawer__empty__item" data-animation="cart-items-fade" data-animation-duration="500" data-animation-delay="250">
-                    <a href="/collections/new-arrival" class="btn btn--full btn--primary btn--outline">
+                    <a href="https://pages.razorpay.com/stores/st_QCveiNeMCGSHCh" class="btn btn--full btn--primary btn--outline">
                       New Arrival
                     </a>
                   </div><div class="drawer__empty__item" data-animation="cart-items-fade" data-animation-duration="500" data-animation-delay="300">
-                    <a href="/collections/mens-shirts" class="btn btn--full btn--primary btn--outline">
+                    <a href="https://pages.razorpay.com/stores/st_QCveiNeMCGSHCh" class="btn btn--full btn--primary btn--outline">
                       Shirts
                     </a>
                   </div><div class="drawer__empty__item" data-animation="cart-items-fade" data-animation-duration="500" data-animation-delay="350">
-                    <a href="/collections/mens-pants" class="btn btn--full btn--primary btn--outline">
+                    <a href="https://pages.razorpay.com/stores/st_QCveiNeMCGSHCh" class="btn btn--full btn--primary btn--outline">
                       Pants
                     </a>
                   </div><div class="drawer__empty__item" data-animation="cart-items-fade" data-animation-duration="500" data-animation-delay="400">
-                    <a href="/collections/t-shirts" class="btn btn--full btn--primary btn--outline">
+                    <a href="https://pages.razorpay.com/stores/st_QCveiNeMCGSHCh" class="btn btn--full btn--primary btn--outline">
                       T-Shirts
                     </a>
                   </div><div class="drawer__empty__item" data-animation="cart-items-fade" data-animation-duration="500" data-animation-delay="450">
-                    <a href="/collections/shorts" class="btn btn--full btn--primary btn--outline">
+                    <a href="https://pages.razorpay.com/stores/st_QCveiNeMCGSHCh" class="btn btn--full btn--primary btn--outline">
                       Shorts
                     </a>
                   </div><div class="drawer__empty__item" data-animation="cart-items-fade" data-animation-duration="500" data-animation-delay="500">
-                    <a href="/collections/last-pieces-shirt" class="btn btn--full btn--primary btn--outline">
+                    <a href="https://pages.razorpay.com/stores/st_QCveiNeMCGSHCh" class="btn btn--full btn--primary btn--outline">
                       Last Size
                     </a>
                   </div><div class="drawer__empty__item drawer__empty__item--odd--last" data-animation="cart-items-fade" data-animation-duration="500" data-animation-delay="550">
-                    <a href="/collections/sale" class="btn btn--full btn--primary btn--outline">
+                    <a href="https://pages.razorpay.com/stores/st_QCveiNeMCGSHCh" class="btn btn--full btn--primary btn--outline">
                       Sale
                     </a>
                   </div></div></div>
@@ -1840,7 +1840,7 @@ for (var attr in meta) {
           <img src="images/P10872-M.jpg" alt="Slide image" width="1400" height="1750" loading="eager" fetchpriority="high" sizes="100vw" srcset="images/P10872-M_5.jpg 180w, images/P10872-M_7.jpg 360w, images/P10872-M_6.jpg 540w, images/P10872-M_4.jpg 720w, images/P10872-M_2.jpg 900w, images/P10872-M_3.jpg 1080w, images/P10872-M_1.jpg 1296w, images/P10872-M.jpg 1400w" class="is-loading" style="object-position: var(--focal-point, center)">
         </picture></div>
   </div>
-</div></a></div><div class="slideshow__slide slideshow__slide--image_CnEN47 frame wide-image image-height image-height--mobile" style="--text:#ffffff;" data-slide="image_CnEN47" data-slide-index="1" data-slide-text-color="#ffffff"><a class="hero__image frame__item" href="/collections/new-arrival" aria-label="Slide image"><div class="image__hero__frame image-height image-height--mobile" style="--aspect-ratio: 2.0;--aspect-ratio-mobile: 0.8;">
+</div></a></div><div class="slideshow__slide slideshow__slide--image_CnEN47 frame wide-image image-height image-height--mobile" style="--text:#ffffff;" data-slide="image_CnEN47" data-slide-index="1" data-slide-text-color="#ffffff"><a class="hero__image frame__item" href="https://pages.razorpay.com/stores/st_QCveiNeMCGSHCh" aria-label="Slide image"><div class="image__hero__frame image-height image-height--mobile" style="--aspect-ratio: 2.0;--aspect-ratio-mobile: 0.8;">
   <div class="image__hero__pane">
     <div class="image__hero__scale image__fill lazy-image lazy-image--backfill is-loading"><style data-shopify="">@media (min-width: 750px) {
             #Picture-05546bc61de2b00bdb9fa1b536118153 { --focal-point: 50.0% 50.0%; }
@@ -1871,7 +1871,7 @@ for (var attr in meta) {
     --columns-small: 2;
     --columns-mobile: 2;
   }</style><div class="highlights section-padding" id="highlights--template--22609655103764__section_highlights_UnaemP" data-section-id="template--22609655103764__section_highlights_UnaemP" data-section-type="highlights">
-  <div class="wrapper--full-padded highlights__container"><div class="highlights__items highlights__items--mobile-grid"><div class="highlights__item highlights__item--button" data-aos="fade" data-aos-duration="500" data-aos-delay="0" data-aos-anchor="#highlights--template--22609655103764__section_highlights_UnaemP" style="--bg: #000000;--bg-brighter: #1a1a1a;--text: #f7f9fa;"><a href="/collections/new-arrival" class="highlights__item-inner btn btn--outline btn--large"><div class="highlights__item__content body-size-3">
+  <div class="wrapper--full-padded highlights__container"><div class="highlights__items highlights__items--mobile-grid"><div class="highlights__item highlights__item--button" data-aos="fade" data-aos-duration="500" data-aos-delay="0" data-aos-anchor="#highlights--template--22609655103764__section_highlights_UnaemP" style="--bg: #000000;--bg-brighter: #1a1a1a;--text: #f7f9fa;"><a href="https://pages.razorpay.com/stores/st_QCveiNeMCGSHCh" class="highlights__item-inner btn btn--outline btn--large"><div class="highlights__item__content body-size-3">
                 <span>New Arrival</span>
               </div></a></div><div class="highlights__item highlights__item--button" data-aos="fade" data-aos-duration="500" data-aos-delay="150" data-aos-anchor="#highlights--template--22609655103764__section_highlights_UnaemP" style="--bg: #212121;--bg-brighter: #3b3b3b;--text: #f7f9fa;"><a href="/collections/best-seller" class="highlights__item-inner btn btn--outline btn--large"><div class="highlights__item__content body-size-3">
                 <span>Best Sellers</span>
@@ -2201,10 +2201,10 @@ for (var attr in meta) {
     </a>
   </li></ul></div>
                 </div>
-<div class="footer__block footer__block--menu" style="--desktop-width: 15%;"><h2 class="h5 footer__block__title">Menu</h2><ul class="footer__quicklinks unstyled"><li><a href="/collections/new-arrival">New Arrival</a></li><li><a href="/collections/mens-shirts">Shirts</a></li><li><a href="/collections/mens-pants">Pants</a></li><li><a href="/collections/t-shirts">T-Shirts</a></li><li><a href="/collections/shorts">Shorts</a></li><li><a href="/collections/last-pieces-shirt">Last Chance</a></li><li><a href="/collections/sale">Sale</a></li></ul></div>
-<div class="footer__block footer__block--menu" style="--desktop-width: 15%;"><h2 class="h5 footer__block__title">Shirts</h2><ul class="footer__quicklinks unstyled"><li><a href="/collections/new-mens-shirts">New Arrivals</a></li><li><a href="/collections/business-shirts">Business Shirts</a></li><li><a href="/collections/classic-whites">Classic Whites</a></li><li><a href="/collections/oxford-spectrum">Oxford Spectrum</a></li><li><a href="/collections/sleek-silhouette">Sleek Silhouette</a></li><li><a href="/collections/vichy">Vichy</a></li><li><a href="/collections/siento-felix">Siento Felix</a></li></ul></div>
-<div class="footer__block footer__block--menu" style="--desktop-width: 15%;"><h2 class="h5 footer__block__title">Information</h2><ul class="footer__quicklinks unstyled"><li><a href="/policies/privacy-policy">Privacy Policy</a></li><li><a href="/policies/terms-of-service">Terms of Service</a></li><li><a href="/policies/shipping-policy">Shipping Policy</a></li><li><a href="/policies/refund-policy">Returns & Exchanges</a></li><li><a href="/pages/about-us">About Us</a></li><li><a href="/pages/faqs">FAQ's</a></li></ul></div>
-<div class="footer__block footer__block--menu" style="--desktop-width: 15%;"><h2 class="h5 footer__block__title">Help</h2><ul class="footer__quicklinks unstyled"><li><a href="/pages/return-exchange-request">Placed Exchange / Return</a></li><li><a href="/pages/contact">Contact Us</a></li><li><a href="/pages/size-chart-john-ellies">Size Chart</a></li><li><a href="/pages/faqs">FAQ's</a></li></ul></div></div></div>
+<div class="footer__block footer__block--menu" style="--desktop-width: 15%;"><h2 class="h5 footer__block__title">Menu</h2><ul class="footer__quicklinks unstyled"><li><a href="https://pages.razorpay.com/stores/st_QCveiNeMCGSHCh">New Arrival</a></li><li><a href="/collections/mens-shirts">Shirts</a></li><li><a href="/collections/mens-pants">Pants</a></li><li><a href="/collections/t-shirts">T-Shirts</a></li><li><a href="/collections/shorts">Shorts</a></li><li><a href="/collections/last-pieces-shirt">Last Chance</a></li><li><a href="/collections/sale">Sale</a></li></ul></div>
+<div class="footer__block footer__block--menu" style="--desktop-width: 15%;"><h2 class="h5 footer__block__title">Shirts</h2><ul class="footer__quicklinks unstyled"><li><a href="https://pages.razorpay.com/stores/st_QCveiNeMCGSHCh">New Arrivals</a></li><li><a href="/collections/business-shirts">Business Shirts</a></li><li><a href="/collections/classic-whites">Classic Whites</a></li><li><a href="/collections/oxford-spectrum">Oxford Spectrum</a></li><li><a href="/collections/sleek-silhouette">Sleek Silhouette</a></li><li><a href="/collections/vichy">Vichy</a></li><li><a href="/collections/siento-felix">Siento Felix</a></li></ul></div>
+<div class="footer__block footer__block--menu" style="--desktop-width: 15%;"><h2 class="h5 footer__block__title">Information</h2><ul class="footer__quicklinks unstyled"><li><a href="https://pages.razorpay.com/stores/st_QCveiNeMCGSHCh">Privacy Policy</a></li><li><a href="/policies/terms-of-service">Terms of Service</a></li><li><a href="/policies/shipping-policy">Shipping Policy</a></li><li><a href="/policies/refund-policy">Returns & Exchanges</a></li><li><a href="/pages/about-us">About Us</a></li><li><a href="/pages/faqs">FAQ's</a></li></ul></div>
+<div class="footer__block footer__block--menu" style="--desktop-width: 15%;"><h2 class="h5 footer__block__title">Help</h2><ul class="footer__quicklinks unstyled"><li><a href="https://pages.razorpay.com/stores/st_QCveiNeMCGSHCh">Placed Exchange / Return</a></li><li><a href="/pages/contact">Contact Us</a></li><li><a href="/pages/size-chart-john-ellies">Size Chart</a></li><li><a href="/pages/faqs">FAQ's</a></li></ul></div></div></div>
 </section>
 </div><div id="shopify-section-sections--22609655595284__supporting-menu" class="shopify-section shopify-section-group-group-footer"><!-- /sections/section-supporting-menu.liquid --><style data-shopify="">#SupportingMenu--sections--22609655595284__supporting-menu {
     --PT: 30px;
