--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <link href="//johnellies.in/cdn/shop/t/6/assets/vendor.js?v=152754676678534273481714190268" as="script" rel="preload">
   <link href="//johnellies.in/cdn/shop/t/6/assets/theme.js?v=122262640503032202521714190268" as="script" rel="preload">
 
-    <link rel="icon" type="image/png" href="//johnellies.in/cdn/shop/files/Favicon.png?crop=center&height=32&v=1707712124&width=32">
-  
+    
+    <link rel="icon" href="./images/WhatsApp Image 2025-04-03 at 15.19.24_1820e7f3.jpg" type="image/icon type">
 
   <!-- Title and description ================================================ -->
   
